[gd_scene load_steps=6 format=3 uid="uid://dy8lnrkp88fju"]

[ext_resource type="PackedScene" uid="uid://cme66uldrjl2i" path="res://addons/godot-xr-tools/interactables/interactable_area_button.tscn" id="1_8pwo6"]
[ext_resource type="Script" path="res://resources/objects/next_order_button.gd" id="2_81wx0"]
[ext_resource type="PackedScene" uid="uid://t3bu35m8u0kq" path="res://assets/models/objects/furniture/order_button.blend" id="2_sfyja"]
[ext_resource type="AudioStream" uid="uid://coqrwlvld3vjg" path="res://audio/food_prep/order_print/order_print.mp3" id="6_6gout"]

[sub_resource type="CylinderShape3D" id="CylinderShape3D_hu8ll"]
height = 0.0797617
radius = 0.0595509

[node name="NextOrderButton" instance=ExtResource("1_8pwo6")]
collision_mask = 16777216
monitorable = false
script = ExtResource("2_81wx0")
button = NodePath("order_button/Cylinder_003")

[node name="CollisionShape3D" type="CollisionShape3D" parent="." index="0"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.0214447, 0)
shape = SubResource("CylinderShape3D_hu8ll")

[node name="order_button" parent="." index="1" instance=ExtResource("2_sfyja")]

[node name="Order_Paper_Spawner" type="Marker3D" parent="." index="2"]

[node name="ButtonPlayer" type="AudioStreamPlayer3D" parent="." index="3"]
max_polyphony = 2
bus = &"SFX"

[node name="PrintPlayer" type="AudioStreamPlayer3D" parent="." index="4"]
stream = ExtResource("6_6gout")
volume_db = -18.0
bus = &"SFX"

[connection signal="button_pressed" from="." to="." method="_on_button_pressed"]
[connection signal="button_released" from="." to="." method="_on_button_released"]

[editable path="order_button"]
